# 4writersBOT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  nuitka-crash-report.xml  pyproject.toml  test_10_pages.py  test_article_reader.py  test_bot.py  test_full_article.py  test_full_workflow.py  test_llm_service.py  test_openalex.py  test_openrouter.py  test_quotes.py  test_researcher.py  test_semantic_scholar.py
data/: bot.db
prompts/: analyzer_prompt.txt  citation_integrator_prompt.txt  citation_placement_fix_instructions.txt  requirements_extractor_prompt.txt  researcher_prompt.txt  rewriter_prompt.txt  writer_prompt.txt  writer_revise_prompt.txt
prompts/citation_styles/: apa_instructions.txt  chicago_instructions.txt  harvard_instructions.txt  mla_instructions.txt
prompts/shared/: citation_integrator_prompt.txt  paper_relevance_check_prompt.txt  quality_checker_post_humanization_prompt.txt
src/: __main__.py  checkpoint_manager.py  config.py  store.py
src/agents/: __init__.py  ai_detector.py  analyzer.py  base_agent.py  citation_integrator.py  humanizer.py  humanizer.py.backup  quality_checker.py  quality_checker_post_humanization.py  references_generator.py  requirements_analyzer.py  requirements_extractor.py  researcher.py  rewriter.py  word_count_checker.py  writer.py  writer_modes.py
src/db/: database.py
src/formatters/: __init__.py  (+1 more)
test/: 0174934347_Gender Symmetry and Restorative Justice in Intimate Partner Violence-edited.docx  CRIM 4232 Week 12 Short Answer question.docx  order.txt  output_text.txt
(+39 files in other folders)
