[tool.poetry]
name = "4writersbot"
version = "0.2.0"
description = "Parser for 4writers on aiogram"
authors = ["socalmy <sergeitoropov2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
envparse = "^0.2.0"
py4writers = "^0.7.0"
langgraph = "^0.2.57"
langchain = "^0.3.20"
langchain-anthropic = "^0.3.4"
langchain-openai = "^0.3.0"
tavily-python = "^0.5.0"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
tiktoken = "^0.8.0"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"
semanticscholar = "^0.11.0"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
